--- a/recap_agr/templates/index.html
+++ b/recap_agr/templates/index.html
@@ -16,13 +16,13 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='main.css')}}">
 	<script src="{{ url_for('static', filename='main.js')}}"></script>
 
-	<title>{{ app_name }}</title>
+	<title>{{ config["app_name"] }}</title>
 </head>
 
 <body>
 	<div class="container" id="content">
 		<h1>
-			<a href="https://github.com/{{ app_name }}" target="_blank">{{ app_name }}
+			<a href="https://github.com/{{ config["app_name"] }}" target="_blank">{{ config["app_name"] }}
 			</a>
 		</h1>
 
